# routes/admin.js
@@ -2,7 +2,9 @@ const express = require('express');
 const router = express.Router();
 const adminController = require('../controllers/adminController');
 
+
 router.post('/register', adminController.registerAdmin);
 router.post('/login', adminController.loginAdmin);
+router.delete('/:id', adminController.deleteAdmin);
 
 module.exports = router;
